# PI-Strategist

./: .gitignore  README.md  pyproject.toml  requirements.txt
.claude/: config.json  settings.local.json
.claude/agents/: pi-strategist.json
.claude/hooks/: session-start.sh
.claude/prompts/: add-chart.md  add-page.md  add-report.md  analyze-data.md  critique.md  extend-parser.md  frontend.md  organize.md  pi-strategist.md  qa.md  test.md
.devcontainer/: devcontainer.json
.streamlit/: config.toml
backend/: .env.example  requirements.txt
backend/app/: __init__.py  config.py  main.py
backend/app/core/: database.py  file_storage.py  logging.py  rate_limiter.py  session.py
backend/app/models/: responses.py
backend/app/services/: quick_check_service.py
backend/tests/: conftest.py  test_ai_insights.py  test_analysis.py  test_files.py  test_health.py  test_sessions.py
example docs/: PI 18 CA Lottery 2026 Project Hours Beta v4(Project Hours).csv  PI 18 Candidates - Marketing 110725(Sheet1).csv
example docs/design/pi-strategist-ai/: App.tsx  metadata.json  package.json  types.ts
examples/: sample-capacity-planner.xlsx  sample-ded.md
frontend/: package-lock.json  package.json  vitest.config.ts
frontend/src/: App.css  App.tsx  index.css
frontend/src/__tests__/: App.test.tsx  SummaryTab.test.tsx  setup.ts
frontend/src/api/: client.ts
frontend/src/hooks/: useAnalysis.ts  useObjectives.ts  useQuickCheck.ts  useRisks.ts
frontend/src/i18n/: en.json  index.ts
frontend/src/pages/: AnalyzePage.tsx  ComparePage.tsx  HomePage.tsx  NotFoundPage.tsx  ObjectivesPage.tsx  QuickCheckPage.tsx  RiskRegisterPage.tsx  ScenariosPage.tsx  SettingsPage.tsx
frontend/src/store/: analysisStore.ts  settingsStore.ts
frontend/src/types/: index.ts
frontend/src/utils/: exportCsv.ts  exportPdf.ts
scripts/: create_sample_excel.py
src/pi_strategist/: __init__.py  cli.py  models.py
src/pi_strategist/analyzers/: __init__.py  ai_advisor.py  capacity_analyzer.py  deployment_analyzer.py  resource_analyzer.py  risk_analyzer.py  risk_scorer.py  velocity_analyzer.py
templates/: ded-template.md
tests/: __init__.py  test_ai_advisor.py  test_capacity_analyzer.py  test_deployment_analyzer.py  test_parsers.py  test_pi_planner_parser.py  test_risk_analyzer.py
(+74 files in other folders)
