[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pi-strategist"
version = "1.0.0"
description = "PI planning analysis tool for DEDs and capacity planning"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "PI Strategist Team"}
]
keywords = ["pi-planning", "capacity-planning", "ded-analysis", "agile", "scrum"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Quality Assurance",
]

dependencies = [
    "click>=8.1.0",
    "python-docx>=1.1.0",
    "openpyxl>=3.1.0",
    "pdfplumber>=0.11.0",
    "jinja2>=3.1.0",
    "anthropic>=0.40.0",
    "pydantic>=2.0.0",
    "rich>=13.0.0",
    "streamlit>=1.30.0",
    "fpdf2>=2.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.scripts]
pi-strategist = "pi_strategist.cli:main"
pi-strategist-web = "pi_strategist.web.app:main"

[project.urls]
Homepage = "https://github.com/yourusername/pi-strategist"
Documentation = "https://github.com/yourusername/pi-strategist#readme"
Repository = "https://github.com/yourusername/pi-strategist"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
pi_strategist = ["templates/*.html", "templates/*.jinja2"]

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312']

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=pi_strategist --cov-report=term-missing"
